--- a/Page1/index.html
+++ b/Page1/index.html
@@ -4,23 +4,35 @@
 <head>
   <meta charset="utf-8">
   <title>Health and Wellness</title>
+  <script src="https://kit.fontawesome.com/e3eb694c8e.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="../style.css" type="text/css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
+  <div class="healthandwellnessimg">
+    <img src="../healthandwellnesslogorevised.png" alt="Logo">
+  </div>
+
   <h1>Home Page</h1>
-  <hr>
   <nav>
     <ul>
-      <li><a href="#">Home</a></li>
+      <li><a class="active" href="#">Home</a></li>
       <li><a href="../Page2/athletes.html">Athletes</a></li>
-      <li><a href="#">Meal Plans</a></li>
-      <li><a href="#">Gyms in US</a></li>
+      <li><a href="../Page3/mealplans.html">Meal Plans</a></li>
+      <li><a href="../Page4/gymsinus.html">Gyms in US</a></li>
     </ul>
   </nav>
-  <a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQD-RmxY4HK-wH9RVk1HaiW1p8y_ynkJBr-1Si-9SIKdG7D6niy9A" alt="David Laid"></a>
-  <a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMyaTFhQFhfw_7snPdchcNqlcq8BTRPZnbWLn1ZLX-PRTk7BvM" alt="Obi Vincent"></a>
-  <a href="#"><img src="https://cdn-ami-drupal.heartyhosting.com/sites/muscleandfitness.com/files/styles/full_node_image_1090x614/public/media/1109-karina-elle.jpg?itok=ETOiWY9O" alt="Karina Elle"></a>
-  <a href="#"><img src="https://i.ytimg.com/vi/TgLEfvXkPNY/maxresdefault.jpg" alt="Nikki Blackketter"></a>
+  <div class="imagegrid">
+    <a href="https://davidlaid.com/"><img class="athleteImg" src="../davidlaid.jpg" alt="David Laid"></a>
+    <a href="http://www.simplyshredded.com/obi-vincent.html"><img class="athleteImg" src="../obivincentCropped.jpg" alt="Obi Vincent"></a>
+    <a href="https://www.thefamouspeople.com/profiles/karina-elle-44387.php"><img class="athleteImg" src="../karinaelle.jpg" alt="Karina Elle"></a>
+    <a href="https://nikkiblackketter.com/"><img class="athleteImg" src="../nikkiblacketterCropped.jpg" alt="Nikki Blackketter"></a>
+  </div>
+
+  <footer>
+    Contact me <a href="https://www.google.com" class="fas fa-envelope"></a>
+  </footer>
 </body>
 
 </html>
