--- a/Page2/athletes.html
+++ b/Page2/athletes.html
@@ -4,19 +4,237 @@
 <head>
   <meta charset="utf-8">
   <title>Health and Wellness</title>
+  <script src="https://kit.fontawesome.com/e3eb694c8e.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="../style.css" type="text/css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
+  <div class="healthandwellnessimg">
+    <img src="../healthandwellnesslogorevised.png" alt="Logo">
+  </div>
+
   <h1>Athletes</h1>
-  <hr>
   <nav>
     <ul>
       <li><a href="../Page1/index.html">Home</a></li>
-      <li><a href="#">Athletes</a></li>
-      <li><a href="#">Meal Plans</a></li>
-      <li><a href="#">Gyms in US</a></li>
+      <li><a class="active" href="#">Athletes</a></li>
+      <li><a href="../Page3/mealplans.html">Meal Plans</a></li>
+      <li><a href="../Page4/gymsinus.html">Gyms in US</a></li>
     </ul>
   </nav>
-</body>
+  <h2>Click on an athlete to view their plan!</h2>
+  <div class="imagegrid">
+    <a href="#DavidLaid"><img class="athleteImg" src="../davidlaid.jpg" alt="David Laid"></a>
+    <a href="#ObiVincent"><img class="athleteImg" src="../obivincentCropped.jpg" alt="Obi Vincent"></a>
+    <a href="#KarinaElle"><img class="athleteImg" src="../karinaelle.jpg" alt="Karina Elle"></a>
+    <a href="#NikkiBlacketter"><img class="athleteImg" src="../nikkiblacketterCropped.jpg" alt="Nikki Blackketter"></a>
+  </div>
+  <main>
+    <h2>Workouts</h2>
+    <article>
+      <h2 id=DavidLaid>David Laid Workouts</h2>
+      <h3>
+        Powerbuilding 5 day plan
+      </h3>
+      <section>
+        <h4>
+          Day 1 - Legs
+        </h4>
+        <ol>
+          <li> Squats, 1 set of 1 rep (heavy)</li>
+          <li> Squats, 4 sets of 6 reps</li>
+          <li> Deadlifts, 3 sets of 10 reps</li>
+          <li> Leg extensions, 4 sets of 15 reps</li>
+        </ol>
+      </section>
+      <section>
+        <h4>
+          Day 2 - Push A
+        </h4>
+        <ol>
+          <li> Incline barbell bench, 1 set of 1 rep (heavy)</li>
+          <li> Incline barbell bench, 4 sets of 6 reps</li>
+          <li> Bodyweight dips , 4 sets of 12 reps</li>
+          <li> Seated shoulder press, 4 sets of 10 reps</li>
+          <li> Chest flys, 4 sets of 10 reps</li>
+          <li> Tricep pushdowns, 3 sets of 14 reps</li>
+          <li> Skullcrushers, 3 sets of 14 reps</li>
+        </ol>
+      </section>
+      <section>
+        <h4>
+          Day 3 - Pull A
+        </h4>
+        <ol>
+          <li> Deadlifts, 1 set of 1 rep (heavy)</li>
+          <li> Deadlifts, 4 sets of 6 reps</li>
+          <li> Pull ups, 4 sets of 12 reps</li>
+          <li> Single arm rows, 4 sets of 12 reps</li>
+          <li> Shrugs, 4 sets of 12 reps</li>
+          <li> Dumbbell Curls, 3 sets of 14 reps</li>
+        </ol>
+      </section>
+      <section>
+        <h4>
+          Day 4 - Push B
+        </h4>
+        <ol>
+          <li> Overhead press, 5 sets of 6 reps</li>
+          <li> Incline dumbbell bench, 4 sets of 10 reps</li>
+          <li> Lateral raises, 4 sets of 15 reps</li>
+          <li> Chest flys, 4 sets of 15 reps</li>
+          <li> Tricep pushdowns, 3 sets of 14 reps</li>
+        </ol>
+      </section>
+      <section>
+        <h4>
+          Day 5 - Pull B
+        </h4>
+        <ol>
+          <li> Deadlifts, 5 sets of 6 reps</li>
+          <li> Lat pulldowns, 4 sets of 12 reps</li>
+          <li> Seated cable rows, 4 sets of 12 reps</li>
+          <li> Bent over rows, 4 sets of 12 reps</li>
+          <li> Barbell curls, 3 sets of 14 reps</li>
+        </ol>
+      </section>
+    </article>
+    <article>
+      <h2 id=ObiVincent>Obi Vincent Workouts</h2>
+      <h3>
+        Max Volume 3 day plan
+      </h3>
+      <section>
+        <h4>
+          Day 1 - Chest and arms
+        </h4>
+        <ol>
+          <li> Barbell rows, 4 sets of 8 reps</li>
+          <li> Incline barbell bench, 3 sets of 12 reps</li>
+          <li> Diamond pushups, 3 sets of 15 reps</li>
+          <li> Preacher curls, 3 sets of 12 reps</li>
+          <li> Cable chest flys, 2 sets of 10 reps</li>
+          <li> Pushups, 3 sets of 20 reps</li>
+        </ol>
+      </section>
+      <section>
+        <h4>
+          Day 2 - Back and Shoulders
+        </h4>
+        <ol>
+          <li>#1 - Deadlift, 3 sets of 12 reps</li>
+          <li>#2 - Military press, 3 sets of 12 reps</li>
+          <li>#3 - Pull ups, 3 sets of 12 reps</li>
+          <li>#4 - Lat pulldowns, 3 sets of 12 reps</li>
+          <li>#5 - Seated shoulder press, 3 sets of 12 reps</li>
+          <li>#6 - Seated cable rows, 3 sets of 12 reps</li>
+          <li>#7 - Face pulls, 2 sets of 12</li>
+        </ol>
+      </section>
+      <section>
+        <h4>
+          Day 3 - Legs
+        </h4>
+        <ol>
+          <li> Leg extensions, 3 sets of 25 reps</li>
+          <li> Squats, 4 sets of 20 reps</li>
+          <li> Straight leg deadlifts, 3 sets of 12 reps</li>
+          <li> Lunges, 3 sets of 20 reps</li>
+          <li> Seated calf raises, 3 sets of 15 reps</li>
+          <li> Leg raises, 2 sets of 15 reps</li>
+          <li> Crunches, 3 sets of 15 reps</li>
+          <li> Barbell roll outs, 2 sets of 15 reps</li>
+        </ol>
+      </section>
+    </article>
+    <article>
+      <h2 id=KarinaElle>Karina Elle Workouts</h2>
+      <h3>
+        The Leg Burner 3 day plan
+      </h3>
+      <section>
+        <h4>
+          Day 1 - Legs A
+        </h4>
+        <ol>
+          <li> Squats, 3 sets of 12 reps</li>
+          <li> Step ups, 3 sets of 12 reps</li>
+          <li> Dumbbell sumo squats, 3 sets of 20</li>
+          <li> Dumbbell deadlifts, 3 sets of 12 reps</li>
+          <li> Lunges, 3 sets of 12 reps</li>
+        </ol>
+      </section>
+      <section>
+        <h4>
+          Day 2 - Arms
+        </h4>
+        <ol>
+          <li> Bicep curls, 3 sets of 12 reps</li>
+          <li> Tricep dips, 3 sets of 12 reps</li>
+          <li> Pushups, 3 sets of 15 reps</li>
+          <li> Chin ups, 3 sets of as many reps as possible</li>
+        </ol>
+        <h4>
+          Day 3 - Legs B
+        </h4>
+        <ol>
+          <li> Lunges, 3 sets of 12 reps</li>
+          <li> Dumbbell sumo squats, 3 sets of 12 reps</li>
+          <li> Hip thrusts, 3 sets of 12 reps</li>
+          <li> Calf raises, 3 sets of 15 reps</li>
+          <li> Jump squats, 3 sets of 10 reps</li>
+        </ol>
+      </section>
+    </article>
+    <article>
+      <h2 id=NikkiBlacketter>Nikki Blackketter Workouts</h2>
+      <h3>
+        Sculpt Your Shape 3 Day Plan
+      </h3>
+      <section>
+        <h4>
+          Day 1 - Full Legs
+        </h4>
+        <ol>
+          <li> Pulse squats, 4 sets of 12 reps</li>
+          <li> Hip thrusts, 4 sets of 15 reps</li>
+          <li> Bulgarian split squats, 3 sets of 12 reps</li>
+          <li> Lunges, 3 sets of 12 reps</li>
+          <li> Cable pull throughs, 3 sets of 15 reps</li>
+        </ol>
+      </section>
+      <section>
+        <h4>
+          Day 2 - Upperbody and Hamstrings
+        </h4>
+        <ol>
+          <li> Straight leg deadlifts, 3 sets of 15 reps</li>
+          <li> Cable bicep curls, 3 sets of 15 reps</li>
+          <li> Lying hamstring curls, 3 sets of 15 reps</li>
+          <li> Hamstring curls, 3 sets of 15 reps</li>
+        </ol>
+      </section>
+      <section>
+        <h4>
+          Day 3 - Back and core
+        </h4>
+        <ol>
+          <li> Lat pulldowns, 3 sets of 12 reps</li>
+          <li> Standing cable rows, 3 sets of 12 reps</li>
+          <li> Bentover barbell rows , 3 sets of 12 reps</li>
+          <li> Single arm lat pulldowns, 3 sets of 12 reps</li>
+          <li> Single arm dumbbell rows, 3 sets of 12 reps</li>
+          <li> Cable crunches, 3 sets of 12 reps</li>
+          <li> Decline crunches, 3 sets of 15 reps</li>
+        </ol>
+      </section>
+    </article>
+  </main>
+
+  <footer>
+    <a class="backtotop" href="../Page2/athletes.html">Back to The Top</a>
+    Contact me <a href="https://www.google.com" class="fas fa-envelope"></a>
+  </footer>
 
 </html>
