New map added for validation 4

--- a/Page3/mealplans.html
+++ b/Page3/mealplans.html
@@ -29,6 +29,7 @@
   <h2>
     <a class="mealplanheaders" href="#CuttingMealPlan">Cutting Plan</a>
   </h2>
+  <img class="mealprepgrid" src="../mealprep.jpg" alt="Meal Prep">
   <main>
     <article>
       <h3 class="hidden">Meal plans</h3>
