--- a/Page4/gymsinus.html
+++ b/Page4/gymsinus.html
@@ -26,67 +26,26 @@
     </ul>
   </nav>
   <main>
-    <h2>Good Gyms in The US</h2>
-    <ul>
-      <li><a class="backtotop" href="https://www.bendershsv.com/">Alabama</a></li>
-      <li><a class="backtotop" href="https://alaskaff.com/">Alaska </a> </li>
-      <li><a class="backtotop" href="http://www.thorbeckesgym.com/">Arizona</a></li>
-      <li><a class="backtotop" href="https://www.pulsepremierfitness.com/">Arkansas</a></li>
-      <li><a class="backtotop" href="https://www.thezooculture.com/">California</a></li>
-      <li><a class="backtotop" href="https://www.goldsgym.com/colorado-springs-rustic-hills/">Colorado</a></li>
-      <li><a class="backtotop" href="https://www.powerhousect.com/">Connecticut</a></li>
-      <li><a class="backtotop" href="https://energygym247.com/">Delaware</a></li>
-      <li><a class="backtotop" href="https://www.ironreligiongym.com/">Florida</a></li>
-      <li><a class="backtotop" href="https://livfitness.us/">Georgia</a></li>
-      <li><a class="backtotop" href="https://www.fitnessforeverhawaii.com/">Hawaii</a></li>
-      <li><a class="backtotop" href="https://www.idahofitnessfactory.com/">Idaho</a></li>
-      <li><a class="backtotop" href="http://www.usagyminc.com/">Illinois</a></li>
-      <li><a class="backtotop" href="https://www.peakperformancefitnesscenter.com/">Indiana</a>
-      <li><a class="backtotop" href="http://thegymiowacity.com/">Iowa</a></li>
-      <li><a class="backtotop" href="http://www.bodyfitkansascity.com/">Kansas</a></li>
-      <li><a class="backtotop" href="http://elitefitnessky.com/">Kentucky</a></li>
-      <li><a class="backtotop" href="http://www.lagymclub.com/">Louisiana</a></li>
-      <li><a class="backtotop" href="http://www.mainewarriorgym.com/">Maine</a></li>
-      <li><a class="backtotop" href="http://colosseumgym.com/">Maryland</a></li>
-      <li><a class="backtotop" href="http://www.asylumfitness.net/">Massachusetts</a></li>
-      <li><a class="backtotop" href="https://powerhousegym.com/saline/">Michigan</a></li>
-      <li><a class="backtotop" href="https://southsideathletic.com/">Minnesota</a></li>
-      <li><a class="backtotop" href="https://starkefitness.net/">Mississippi</a></li>
-      <li><a class="backtotop" href="https://www.briansgym.com/">Missouri</a></li>
-      <li><a class="backtotop" href="https://www.clubfuelfitness.com/">Montana</a></li>
-      <li><a class="backtotop" href="http://yorkphysicaltherapy.com/fitness-worx/">Nebraska</a></li>
-      <li><a class="backtotop" href="http://blackirongymnv.com/">Nevada</a></li>
-      <li><a class="backtotop" href="https://www.thezonegym.com/">New Hampshire</a></li>
-      <li><a class="backtotop" href="https://www.equinox.com/clubs/new-jersey/paramus">New Jersey</a></li>
-      <li><a class="backtotop" href="https://tbecrossfit.com/">New Mexico</a></li>
-      <li><a class="backtotop" href="http://www.ludlowfitness.com/">New York</a></li>
-      <li><a class="backtotop" href="http://therockfit.com/index.html">North Carolina</a></li>
-      <li><a class="backtotop" href="http://verge-fitness.com/">North Dakota</a></li>
-      <li><a class="backtotop" href="https://oldschoolgym.com/">Ohio</a></li>
-      <li><a class="backtotop" href="https://tribeokc.com/">Oklahoma</a></li>
-      <li><a class="backtotop" href="https://www.timbertownfitness.com/">Oregon</a></li>
-      <li><a class="backtotop" href="https://www.steelfitnessclub.com/">Pennsylvania</a></li>
-      <li><a class="backtotop" href="https://www.vpfitness.net/">Rhode Island</a></li>
-      <li><a class="backtotop" href="https://www.fitnessworldgyms.com/">South Carolina</a></li>
-      <li><a class="backtotop" href="https://thegyminc.com/">South Dakota</a></li>
-      <li><a class="backtotop" href="https://nashvilleathleticclub.com/">Tennessee</a></li>
-      <li><a class="backtotop" href="https://thealphaletegym.com/">Texas</a></li>
-      <li><a class="backtotop" href="https://www.dialedinfitnessutah.com/">Utah</a></li>
-      <li><a class="backtotop" href="https://www.themanchestergym.com/">Vermont</a></li>
-      <li><a class="backtotop" href="https://inletfitness.com/virginia-beach-greatneck/">Virginia</a></li>
-      <li><a class="backtotop" href="http://www.freedomfitnessgym.com/">Washington</a></li>
-      <li><a class="backtotop" href="https://www.wvfitness.com/">West Virginia</a></li>
-      <li><a class="backtotop" href="http://metroflexwisco.com/">Wisconsin</a></li>
-      <li><a class="backtotop" href="https://wyomingsportandfitness.com/">Wyoming</a></li>
-    </ul>
+    <section class="imagegrid">
+      <iframe src="https://createaclickablemap.com/map.php?&id=86597&maplocation=false&online=true" width="900" height="525" style="border: none;"></iframe>
+
+      <script>
+        if (window.addEventListener) {
+          window.addEventListener("message", function(event) {
+            if (event.data.length >= 22) {
+              if (event.data.substr(0, 22) == "__MM-LOCATION.REDIRECT") location = event.data.substr(22);
+            }
+          }, false);
+        } else if (window.attachEvent) {
+          window.attachEvent("message", function(event) {
+            if (event.data.length >= 22) {
+              if (event.data.substr(0, 22) == "__MM-LOCATION.REDIRECT") location = event.data.substr(22);
+            }
+          }, false);
+        }
+      </script>
+    </section>
   </main>
-
-
-
-
-
-
-
 
   <footer>
     <a class="backtotop" href="../Page4/gymsinus.html">Back to The Top</a>
