Added hidden header for screenreader

--- a/Page4/gymsinus.html
+++ b/Page4/gymsinus.html
@@ -27,6 +27,9 @@
   </nav>
   <main>
     <section class="imagegrid">
+      <h2 class="hidden">
+        Interactive Map of Gyms
+      </h2>
       <iframe src="https://createaclickablemap.com/map.php?&id=86597&maplocation=false&online=true" width="900" height="525" style="border: none;"></iframe>
 
       <script>
