Final touches added to website

--- a/Page2/athletes.html
+++ b/Page2/athletes.html
@@ -3,26 +3,30 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Health and Wellness</title>
+  <title>Athletes</title>
   <script src="https://kit.fontawesome.com/e3eb694c8e.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="../style.css" type="text/css">
+  <link rel="stylesheet" href="/style.css" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Kaleb Killey">
+  <meta name="description" content="health and wellness athletes page">
+  <meta name="keywords" content="Athlete's images and linked info">
 </head>
 
 <body>
   <div class="healthandwellnessimg">
-    <img src="../healthandwellnesslogorevised.png" alt="Logo">
+    <img src="/healthandwellnesslogorevised.png" alt="Logo">
   </div>
-
-  <h1>Athletes</h1>
-  <nav>
-    <ul>
-      <li><a href="../Page1/index.html">Home</a></li>
-      <li><a class="active" href="#">Athletes</a></li>
-      <li><a href="../Page3/mealplans.html">Meal Plans</a></li>
-      <li><a href="../Page4/gymsinus.html">Gyms in US</a></li>
-    </ul>
-  </nav>
+  <header>
+    <h1>Athletes</h1>
+    <nav>
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a class="active" href="#">Athletes</a></li>
+        <li><a href="../Page3/mealplans.html">Meal Plans</a></li>
+        <li><a href="../Page4/gymsinus.html">Gyms in US</a></li>
+      </ul>
+    </nav>
+  </header>
   <h2>Click on an athlete to view their plan!</h2>
   <div class="imagegrid">
     <a href="#DavidLaid"><img class="athleteImg" src="../davidlaid.jpg" alt="David Laid"></a>
