--- a/Page3/mealplans.html
+++ b/Page3/mealplans.html
@@ -3,33 +3,37 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Health and Wellness</title>
+  <title>Meal Plans</title>
   <script src="https://kit.fontawesome.com/e3eb694c8e.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../style.css" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Kaleb Killey">
+  <meta name="description" content="health and wellness meal plans page">
+  <meta name="keywords" content="Athlete's images and linked info">
 </head>
 
 <body>
   <div class="healthandwellnessimg">
     <img src="../healthandwellnesslogorevised.png" alt="Logo">
   </div>
-
-  <h1>Meal Plans</h1>
-  <nav>
-    <ul>
-      <li><a href="../Page1/index.html">Home</a></li>
-      <li><a href="../Page2/athletes.html">Athletes</a></li>
-      <li><a class="active" href="#">Meal Plans</a></li>
-      <li><a href="../Page4/gymsinus.html">Gyms in US</a></li>
-    </ul>
-  </nav>
-  <h2>
-    <a class="mealplanheaders" href="#BulkingMealPlan">Bulking Plan</a>
-  </h2>
-  <h2>
-    <a class="mealplanheaders" href="#CuttingMealPlan">Cutting Plan</a>
-  </h2>
-  <img class="mealprepgrid" src="../mealprep.jpg" alt="Meal Prep">
+  <header>
+    <h1>Meal Plans</h1>
+    <nav>
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../Page2/athletes.html">Athletes</a></li>
+        <li><a class="active" href="#">Meal Plans</a></li>
+        <li><a href="../Page4/gymsinus.html">Gyms in US</a></li>
+      </ul>
+    </nav>
+    <h2>
+      <a class="mealplanheaders" href="#BulkingMealPlan">Bulking Plan</a>
+    </h2>
+    <h2>
+      <a class="mealplanheaders" href="#CuttingMealPlan">Cutting Plan</a>
+    </h2>
+    <img class="mealprepgrid" src="../mealprep.jpg" alt="Meal Prep">
+  </header>
   <main>
     <article>
       <h3 class="hidden">Meal plans</h3>
