--- a/Page4/gymsinus.html
+++ b/Page4/gymsinus.html
@@ -3,11 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Health and Wellness</title>
-  <meta name="description" content="">
+  <title>Gyms in the US</title>
   <script src="https://kit.fontawesome.com/e3eb694c8e.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../style.css" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Kaleb Killey">
+  <meta name="description" content="health and wellness gyms in the us page">
+  <meta name="keywords" content="Athlete's images and linked info">
 </head>
 
 <body>
@@ -16,15 +18,16 @@
       <img src="../healthandwellnesslogorevised.png" alt="Logo">
     </div>
     <h1>Gyms in The US</h1>
+    <nav>
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../Page2/athletes.html">Athletes</a></li>
+        <li><a href="../Page3/mealplans.html">Meal Plans</a></li>
+        <li><a class="active" href="#">Gyms in US</a></li>
+      </ul>
+    </nav>
   </header>
-  <nav>
-    <ul>
-      <li><a href="../Page1/index.html">Home</a></li>
-      <li><a href="../Page2/athletes.html">Athletes</a></li>
-      <li><a href="../Page3/mealplans.html">Meal Plans</a></li>
-      <li><a class="active" href="#">Gyms in US</a></li>
-    </ul>
-  </nav>
+
   <main>
     <section class="imagegrid">
       <h2 class="hidden">
